tests/paczka1/fuzzy1/20426814.err
Error in line 8: Lpdw74vIq A386 57,4
Error in line 6: s3GA37Pkz A823 93,2
Error in line 26: DPjCKWBTx S387 22,4
Error in line 28: A386 S765 79,8
Error in line 29: DPjCKWBTx S765 93,1
